# newapi_credit_logger

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/admin/: __init__.py  router.py
app/admin/templates/: base.html  login.html  source_analyze.html  source_form.html  source_records.html  sources_list.html
app/api/: router.py
app/api/routes/: health.py  public_tools.py  scheduler.py  sources.py
app/api/schemas/: source.py  toolbox.py
app/core/: config.py  logging.py
app/db/: schema.py  session.py
app/models/: __init__.py  api_key_source.py  balance_record.py
app/services/: admin_auth_service.py  balance_collector_service.py  crypto_service.py  public_tool_service.py  query_service.py  source_service.py
app/services/providers/: base.py  catalog.py  compatible_billing_provider.py  factory.py  newapi_provider.py  utils.py
app/tasks/: __init__.py  scheduler_service.py
app/ui/: router.py
docs/: DATABASE_SETUP.md  DEVELOPMENT_PLAN.md  DOCKER_DEPLOYMENT.md  GUI_SPECIFICATION.md  PROVIDER_API_COMPATIBILITY.md  RELEASE_NOTES.md
docs/sql/: mysql_init.sql  postgresql_init.sql
migrations/: env.py
migrations/versions/: 1a94810e8cff_create_source_and_balance_tables.py  8b9d5e21c0ab_add_customer_and_fee_fields_to_source.py  c7f932f7102c_add_key_account_to_api_key_source.py
tests/: conftest.py  test_admin_flow.py  test_api_flow.py  test_provider_compatibility.py  test_public_tools_neko_variant.py  test_scheduler_reload_jobs.py  test_scheduler_throttle.py
(+5 files in other folders)
